Added expert interview, modified layout

--- a/proyecto-final-entrega-2/index.html
+++ b/proyecto-final-entrega-2/index.html
@@ -1,166 +1,230 @@
 <!doctype html>
-  <html lang="en">
-    <head>
-      <!-- Required meta tags -->
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <!-- Bootstrap CSS -->
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-      <title>Proyecto Final - Entrega 2</title>
-      <link rel="stylesheet" href="./index.css">
-    </head>
-    <body class="container">
-      <header class="text-center">
-        <br>
-        <h1>Proyecto Final - Entrega 2</h1>
-        <br>
-        <div class="row">
-          <div class="col-md-4 offset-md-4">
-            <table class="table table-hover">
-              <thead>
-                <tr>
-                  <th><b>Nombre</b></th>
-                  <th><b>Emoji Favorito</b></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Carly</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>Santiago</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td class="align-middle">Aldo Turégano Montes</td>
-                  <td><img src="./assets/glasses.jfif" width="80px" height="80px" alt="Emoji Aldo"></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </header>
-      <hr>
-      <h2>Persona:</h2>
-      <br>
-      <div class="row">
-        <div class="col-md-6" height="100px">
-          <ul class="vertical-align list">
-            <li><b>Nombre:</b> Paco</li>
-            <li><b>Edad:</b> 34 años</li>
-            <li><b>Ocupación:</b> Gerente de Ventas en Empresa Multinacional</li>
-            <li><b>Forma de Ser:</b> Estresado y Ansioso</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <div class="text-center">
-            <img src="./assets/paco.png" width="150px" height="150px" alt="Paco">
-            <br>
-            <br>
-            <p class="text-justify">
-              Paco es un padre de familia que trabaja como Gerente de Ventas en una empresa multinacional y por lo tanto tiene muchas juntas y reuniones todos los días. Cuando Paco debe cuidar a su hija Andrea de 4 años siente mucha frustración ya que ella al ser muy juguetona lo distrae de sus tareas diarias. Paco normalmente busca entretenerla con juegos que encuentra en el iPad pero le preocupa el contenido y lo que ella pueda llegar a aprender con esos juegos por lo cual se encuentra constantemente buscando soluciones viables.
-            </p>
-          </div>
-        </div>
+<html lang="en">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <title>Proyecto Final - Entrega 2</title>
+  <link rel="stylesheet" href="./index.css">
+</head>
+
+<body class="container">
+  <header class="text-center">
+    <br>
+    <h1>Proyecto Final - Entrega 2</h1>
+    <br>
+    <div class="row">
+      <div class="col-md-4 offset-md-4">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th><b>Nombre</b></th>
+              <th><b>Emoji Favorito</b></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Carly</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td class="align-middle">Santiago Alcérreca De la Viña</td>
+              <td><img src="./assets/man-shrugging.png" width="80px" height="80px" alt="Emoji Santiago"></td>
+            </tr>
+            <tr>
+              <td class="align-middle">Aldo Turégano Montes</td>
+              <td><img src="./assets/glasses.png" width="80px" height="80px" alt="Emoji Aldo"></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-      <br>
-      <div class="row">
-        <div class="col-md-6">
-          <ul class="vertical-align list">
-            <li><b>Nombre:</b> Andrea</li>
-            <li><b>Edad:</b> 4 años</li>
-            <li><b>Nivel Educativo:</b> Kinder</li>
-            <li><b>Forma de Ser:</b> Risueña y Juguetona</li>
-          </ul>
-        </div>
-        <div class="col-md-6">
-          <div class="text-center">
-            <img src="./assets/andrea.png" width="150px" height="150px" alt="Andrea">
-            <br>
-            <br>
-            <p class="text-justify">
-              Andrea es la hija de Paco. Es una niña de 4 años muy juguetona la cual se distrae con facilidad y necesita muchos estímulos para mantenerse concentrada. Andrea por la edad en la que está es una niña algo egoísta y eso le preocupa a su papá ya que ha llegado a tener problemas con sus compañeros de Kinder y hasta las maestras han tenido que intervenir. Paco cree que Andrea debería tener más amigas y sobre todo aprender a compartir y a aceptar a sus amigas como son.
-            </p>
-          </div>
-        </div>
-      </div>
+    </div>
+  </header>
+  <hr>
+  <h2>Persona:</h2>
+  <br>
+  <img src="./assets/paco.png" width="300px" height="300px" alt="Paco" class="mx-auto d-block">
+  <br>
+  <div class="row">
+    <div class="col-md-6" height="100px">
+      <ul class="description list">
+        <li><b>Nombre:</b> Paco</li>
+        <li><b>Edad:</b> 34 años</li>
+        <li><b>Ocupación:</b> Gerente de Ventas en Empresa Multinacional</li>
+        <li><b>Forma de Ser:</b> Estresado y Ansioso</li>
+      </ul>
+    </div>
+    <div class="col-md-6">
       <div class="text-center">
         <br>
-        <h2><b>Ventajas y Desventajas</b></h2>
         <br>
-        <div class="row">
-          <div class="col-md-6 offset-md-3">
-            <table class="table table-hover text-justify">
-              <thead>
-                <tr>
-                  <th>Ventajas</th>
-                  <th>Desventajas</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Una ventaja de esta metodología es que te permite modelar usuarios y clientes potenciales de tu producto.</td>
-                  <td>Como desventaja de esta metodología tenemos que es muy fácil "ajustar" a la persona a que empate con el producto que buscamos desarrollar.</td>
-                </tr>
-                <tr>
-                  <td>Esta metodología te permite añadir muchos atributos a tu persona como puede ser forma de ser, ubicación, estatus socio.económico, etc...</td>
-                  <td>Esta metodología solo te enseña una parte de tu mercado potencial en el mundo real.</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
+        <p class="text-justify">
+          Paco es un padre de familia que trabaja como Gerente de Ventas en una empresa multinacional y por lo tanto tiene muchas juntas y reuniones todos los días. Cuando Paco debe cuidar a su hija Andrea de 4 años siente mucha frustración ya que
+          ella al ser muy juguetona lo distrae de sus tareas diarias. Paco normalmente busca entretenerla con juegos que encuentra en el iPad pero le preocupa el contenido y lo que ella pueda llegar a aprender con esos juegos por lo cual se encuentra
+          constantemente buscando soluciones viables.
+        </p>
       </div>
-      <br>
-      <hr>
-      <br>
-      <h2>Journey Mapping:</h2>
-      <br>
-      <div class="text-center" >
-        <iframe width="90%" height="360" src="https://miro.com/app/embed/o9J_kpCQ5wk=/?" frameborder="0" scrolling="no" allowfullscreen></iframe>
-      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <img src="./assets/andrea.png" width="250px" height="250px" alt="Andrea" class="mx-auto d-block">
+  <br>
+  <div class="row">
+    <div class="col-md-6">
+      <ul class="description list">
+        <li><b>Nombre:</b> Andrea</li>
+        <li><b>Edad:</b> 4 años</li>
+        <li><b>Nivel Educativo:</b> Kinder</li>
+        <li><b>Forma de Ser:</b> Risueña y Juguetona</li>
+      </ul>
+    </div>
+    <div class="col-md-6">
       <div class="text-center">
         <br>
-        <h2><b>Ventajas y Desventajas</b></h2>
         <br>
-        <div class="row">
-          <div class="col-md-6 offset-md-3">
-            <table class="table table-hover text-justify">
-              <thead>
-                <tr>
-                  <th>Ventajas</th>
-                  <th>Desventajas</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Una ventaja de esta metodología es que te permite mapear los múltiples caminos que puede tomar un usuario o cliente al momento de querer seleccionar tu producto.</td>
-                  <td>Como desventaja de esta metodología y al igual que la pasada, puede resultar relativamente "fácil" modelar el camino que puede seguir una persona a nuestra conveniencia. Esto no tiene que ser necesariamente conciente.</td>
-                </tr>
-                <tr>
-                  <td>Esta metodología además te deja interactuar con diferentes tipos de personas, situaciones, emociones y opciones.</td>
-                  <td>Bien desarrollada esta metodología puede llegar a ser algo complicada seguirla o leerla.</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
+        <p class="text-justify">
+          Andrea es la hija de Paco. Es una niña de 4 años muy juguetona la cual se distrae con facilidad y necesita muchos estímulos para mantenerse concentrada. Andrea por la edad en la que está es una niña algo egoísta y eso le preocupa a su papá
+          ya que ha llegado a tener problemas con sus compañeros de Kinder y hasta las maestras han tenido que intervenir. Paco cree que Andrea debería tener más amigas y sobre todo aprender a compartir y a aceptar a sus amigas como son.
+        </p>
       </div>
-      <br>
-      <hr>
-      <br>
-      <h2>Entrevistas a Usuarios:</h2>
-      <br>
-      <hr>
-      <br>
-      <h2>Entrevista a Experto:</h2>
-      <br>
-      <hr>
-      <!-- Optional JavaScript -->
-      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    </body>
-  </html>
+    </div>
+  </div>
+  <div class="text-center">
+    <br>
+    <br>
+    <h2><b>Ventajas y Desventajas</b></h2>
+    <br>
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <table class="table table-hover table-striped text-justify">
+          <thead class="thead-dark">
+            <tr>
+              <th>Ventajas</th>
+              <th>Desventajas</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Una ventaja de esta metodología es que te permite modelar usuarios y clientes potenciales de tu producto.</td>
+              <td>Como desventaja de esta metodología tenemos que es muy fácil "ajustar" a la persona a que empate con el producto que buscamos desarrollar.</td>
+            </tr>
+            <tr>
+              <td>Esta metodología te permite añadir muchos atributos a tu persona como puede ser forma de ser, ubicación, estatus socio.económico, etc...</td>
+              <td>Esta metodología solo te enseña una parte de tu mercado potencial en el mundo real.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <br>
+  <hr>
+  <br>
+  <h2>Journey Mapping:</h2>
+  <br>
+  <div class="text-center">
+    <iframe width="90%" height="360" src="https://miro.com/app/embed/o9J_kpCQ5wk=/?" frameborder="0" scrolling="no" allowfullscreen></iframe>
+  </div>
+  <div class="text-center">
+    <br>
+    <br>
+    <h2><b>Ventajas y Desventajas</b></h2>
+    <br>
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <table class="table table-hover table-striped text-justify">
+          <thead class="thead-dark">
+            <tr>
+              <th>Ventajas</th>
+              <th>Desventajas</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Una ventaja de esta metodología es que te permite mapear los múltiples caminos que puede tomar un usuario o cliente al momento de querer seleccionar tu producto.</td>
+              <td>Como desventaja de esta metodología y al igual que la pasada, puede resultar relativamente "fácil" modelar el camino que puede seguir una persona a nuestra conveniencia. Esto no tiene que ser necesariamente conciente.</td>
+            </tr>
+            <tr>
+              <td>Esta metodología además te deja interactuar con diferentes tipos de personas, situaciones, emociones y opciones.</td>
+              <td>Bien desarrollada esta metodología puede llegar a ser algo complicada seguirla o leerla.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <br>
+  <hr>
+  <br>
+  <h2>Entrevistas a Usuarios:</h2>
+  <br>
+  <hr>
+  <br>
+  <h2>Entrevista a Experto:</h2>
+  <br><br>
+  <div class="expert text-center">
+    Puede escuchar la entrevista con la psicóloga Mónica Ornelas aquí:
+    <br>
+    <br>
+    <audio controls src="./assets/entrevista-experto.mp3">
+      Su navegador no es compatible con los elementos <code>audio</code>.
+    </audio>
+    <br><br><br>
+    <h4><b>Lista de preguntas y su justificación</b></h4>
+    <br>
+    <div class="row">
+      <div class="col-md-12">
+        <table class=" table table-hover table-striped text-justify">
+          <thead class="thead-dark">
+            <tr>
+              <th>Pregunta</th>
+              <th>Justificación</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><i>¿Nos puede contar un poco acerca de usted y su ocupación/profesión?</i></td>
+              <td>Esta pregunta es más que nada para conocer un poco de los antecendentes laborales y la experiencia del experto, y corroborar que su área es de nuestro interés.</td>
+            </tr>
+            <tr>
+              <td><i>¿Qué opina usted acerca de la enseñanza de la inclusión y no discriminación a niños y adolescentes?</i></td>
+              <td>Aquí tratamos de que la experta nos explique la relavancia que tiene este tema en la actualidad, especialmente las razónes del por qué es un tema de enseñanza indispensable.</td>
+            </tr>
+            <tr>
+              <td><i>¿Quiénes cree que son los principales actores que ayudan a consolidar estas enseñanzas?</i></td>
+              <td>Con esta pregunta quisimos ver quiénes podrían ser nuestros posibles clientes (o mercado objetivo), para así poder adecuar nuestro contenido, modo de uso, y la estética de nuestro producto. </td>
+            </tr>
+            <tr>
+              <td><i>¿Hay algo que usted considere sea indispensable para que una persona sea inclusiva y/o tolerante?</i></td>
+              <td>Al realizar esta pregunta, nos enfocamos en tratar de obtener información importante que sea crucial que incluyamos en el contenido de nuestro producto para poder proveer una enseñanza integra y completa.</td>
+            </tr>
+            <tr>
+              <td><i>¿Cree que un método de aprendizaje con enfoque lúdico sea útil para la enseñanza de estos temas?</i></td>
+              <td>Hacer esta pregunta nos ayudaría a corroborar si el enfoque principal de nuestro producto tiene firmes bases de éxito en otros casos y áreas o no, para así determinar si vamos por el camino indicado.</td>
+            </tr>
+            <tr>
+              <td><i>¿Cuál sería su método de preferencia para enseñar estos temas a niños y adolescentes?</i></td>
+              <td>Dada esta pregunta, nos quisimos informar un poco más acerca de qué otros métodos, además del lúdico, eran utilizados en la vida real para la enseñanza de estos temas, y tomarlos en cuenta al desarrollar nuestro producto.</td>
+            </tr>
+            <tr>
+              <td><i>¿Qué tan factible considera que un videojuego móvil pueda fortalecer los valores de la inclusión, diversidad, tolerancia y no discriminación?</i></td>
+              <td>Finalmente, al platicarle a la experta sobre nuestra propuesta de solución, nos dimos a la tarea de ver si un producto digital podría ser de utilidad para nuestro mercado objetivo, y que así pudieran resolver sus problemáticas.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+</body>
+
+</html>
