Fixed image sizing, added scenarios table, started scenarios' description

--- a/proyecto-final-entrega-3/index.html
+++ b/proyecto-final-entrega-3/index.html
@@ -28,15 +28,15 @@
           <tbody>
             <tr>
               <td>Carla Cristina Aguilar Aceves</td>
-              <td><img src="./assets/meme-carly.jpg" width="80px" height="80px" alt="Emoji Carly"></td>
+              <td><img src="./assets/meme-carly.jpg" width="120px" height="120px" alt="Meme Carly"></td>
             </tr>
             <tr>
               <td class="align-middle">Santiago Alcérreca De la Viña</td>
-              <td><img src="./assets/man-shrugging.png" width="80px" height="80px" alt="Emoji Santiago"></td>
+              <td><img src="./assets/meme-santi.jpg" width="120px" height="120px" alt="Meme Santiago"></td>
             </tr>
             <tr>
               <td class="align-middle">Aldo Turégano Montes</td>
-              <td><img src="./assets/glasses.png" width="80px" height="80px" alt="Emoji Aldo"></td>
+              <td><img src="./assets/glasses.png" width="120px" height="120px" alt="Meme Aldo"></td>
             </tr>
           </tbody>
         </table>
@@ -44,49 +44,73 @@
     </div>
   </header>
   <div class="row">
-    <div class="col-md-6 offset-md-3">
+    <div class="col-md-8 offset-md-2">
       <hr>
       <h2>Solución de la Problemática:</h2>
       <br>
       <p class="text-justify">La solución que encontramos a la problemática estipulada en las entregas 1 y 2 es inculcar los valores de tolerancia, diversidad e inclusión por medio de un videojuego usando distintos personajes animados llamados
-        <b>"Pelifrutis"</b>. Con esta solución buscamos tener un alto alcance a los niños mexicanos de entre 4 y 8 años y confiamos en tener el apoyo y confianza de los padres de familia.</p>
-      <p> OBJETIVOS: Estimular el trabajo en equipo, reconocimiento y aceptación de las diferencias, tolerancia a la frustración, igualdad y deconstrucción de estereotipos a través de las historias d elos juegos y los personajes.</p>
+        <b>"Pelifrutis"</b>. Con esta solución, buscamos tener un alto alcance a los niños mexicanos de entre 4 y 8 años, y confiamos en tener el apoyo y confianza de los padres de familia.</p>
+      <p><b>OBJETIVOS:</b> Estimular el trabajo en equipo, reconocimiento y aceptación de las diferencias, tolerancia a la frustración, igualdad y deconstrucción de estereotipos a través de las historias de los juegos y los personajes.</p>
+      <br>
       <hr>
       <h2>Escenarios:</h2>
-      <ul>
-        <li>Jugar</li>
-        <li>Jugar con sus Amigos (Campaña)</li>
-        <li>Ver Rankings</li>
-        <li>Reanudar Partida</li>
-        <li>Inicio de Sesión</li>
-        <li>Registro</li>
-        <li>Perfil</li>
-        <li>Tips/Hints</li>
-      </ul>
+      <br>
+      <table class="table table-bordered table-hover">
+        <thead class="thead-dark">
+          <tr>
+            <th class="fixed-size" scope="col">Escenario</th>
+            <th scope="col">Descripción Detallada</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Jugar</td>
+            <td>Al abrir la aplicación, el usuario decide crear una nueva "partida" para poder empezar a disfrutar del juego. Los personajes son presentados, y llega el momento de escoger el tuyo de un repertorio de seis Pelifrutis únicos.
+              <br><br>Ahora, se escucha música leve pero alegre, y comienzan dinámicas entretenidas, cortas y simples, que ayudan al usuario a comprender un poco más acerca de la importancia de la inclusión y la no discriminación.</td>
+          </tr>
+          <tr>
+            <td>Jugar con amigos (multijugador)</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Ver rankings</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Reanudar partida</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Inicio de sesión</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Registro</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Perfil</td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Tips / Hints</td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
       <br>
       <hr>
       <h2>Wireframes:</h2>
       <br>
-      <img src="./assets/wireframes.png">
+      <img class="img-center" src="./assets/wireframe.png">
+      <br><br>
       <hr>
       <h2>Prototipo:</h2>
-      <img src="./assets/pract3.png">
       <br>
-      <hr>
-      <h2>Pregunta:</h2>
-      <br>
+      <img class="img-center" src="./assets/pract3.png">
+      <br><br>
       <hr>
       <br>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3922416.9548325245!2d-94.49905025180786!3d16.24687901107649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x858d44b49757ce67%3A0xcf0033824619d615!2sChiapas!5e0!3m2!1ses!2smx!4v1595025451375!5m2!1ses!2smx"
-        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      <h1 style="color:red;">Steven Spielberg</h1>
-      <video src="https://www.youtube.com/watch?v=wmiIUN-7qhE" autoplay poster="posterimage.jpg"></video>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3922416.9548325245!2d-94.49905025180786!3d16.24687901107649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x858d44b49757ce67%3A0xcf0033824619d615!2sChiapas!5e0!3m2!1ses!2smx!4v1595025451375!5m2!1ses!2smx"
-        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/59/MEX_ON_JOSE_EMILIO_PACHECO_%2812166149286%29.jpg">
-      <img src="https://images-na.ssl-images-amazon.com/images/I/71f+UzEuVJL.jpg">
     </div>
   </div>
   <!-- Optional JavaScript -->
