Fixed image compatibility in browsers

--- a/proyecto-final-entrega-3/index.html
+++ b/proyecto-final-entrega-3/index.html
@@ -36,7 +36,7 @@
             </tr>
             <tr>
               <td class="align-middle">Aldo Turégano Montes</td>
-              <td><img src="./assets/meme-aldo.jpg" width="120px" height="120px" alt="Meme Aldo"></td>
+              <td><img src="./assets/meme-aldo-fixed.jpg" width="120px" height="120px" alt="Meme Aldo"></td>
             </tr>
           </tbody>
         </table>
@@ -70,7 +70,8 @@
           </tr>
           <tr>
             <td>Jugar con amigos (multijugador)</td>
-            <td>Al igual que jugar solo, el usuario también tndrá la posibilidad de jugar de forma colaborativa o "en campaña" con otros usuarios de la aplicación siempre y cuando sean antes usuarios aprobados. Los puntos ganados en la partida se distribuirán entre los jugadores de acuerdo a su aporte en el mismo.</td>
+            <td>Al igual que jugar solo, el usuario también tndrá la posibilidad de jugar de forma colaborativa o "en campaña" con otros usuarios de la aplicación siempre y cuando sean antes usuarios aprobados. Los puntos ganados en la partida se
+              distribuirán entre los jugadores de acuerdo a su aporte en el mismo.</td>
           </tr>
           <tr>
             <td>Ver rankings</td>
@@ -78,15 +79,18 @@
           </tr>
           <tr>
             <td>Reanudar partida</td>
-            <td>Si el usuario se encuentra jugando una partida en solitario y surge la necesidad del usuario de pausar el juego por cualquier razón, esto se podrá hacer indefinidamente y la interfaz le permitirá al usuario reanudarla cuando así lo desee el jugador.</td>
+            <td>Si el usuario se encuentra jugando una partida en solitario y surge la necesidad del usuario de pausar el juego por cualquier razón, esto se podrá hacer indefinidamente y la interfaz le permitirá al usuario reanudarla cuando así lo
+              desee el jugador.</td>
           </tr>
           <tr>
             <td>Inicio de sesión</td>
-            <td>Al abrir la aplicación y una vez que ya se haya generado el usuario o hecho el registro. El jugador podrá entrar a su sesión proporcionando el correo electrónico utilizado y su contraseña. Una vez iniciada la sesión se le dirigirá al usuario al menú principal.</td>
+            <td>Al abrir la aplicación y una vez que ya se haya generado el usuario o hecho el registro. El jugador podrá entrar a su sesión proporcionando el correo electrónico utilizado y su contraseña. Una vez iniciada la sesión se le dirigirá al
+              usuario al menú principal.</td>
           </tr>
           <tr>
             <td>Registro</td>
-            <td>Al abrir la aplicación, la primera acción que se deberá hacer es registrarse. Para esto se deberá de proporcionar como mínimo nombre, correo electrónico y una contraseña. Después de ejecutar esta acción exitosamente el usuario podrá ahora iniciar su sesión.
+            <td>Al abrir la aplicación, la primera acción que se deberá hacer es registrarse. Para esto se deberá de proporcionar como mínimo nombre, correo electrónico y una contraseña. Después de ejecutar esta acción exitosamente el usuario podrá
+              ahora iniciar su sesión.
               <br><br> El objetivo de este escenario es poder tener la información necesaria para garantizar una interacción entre usuarios dentro del juego.</td>
           </tr>
           <tr>
@@ -95,7 +99,8 @@
           </tr>
           <tr>
             <td>Tips / Hints</td>
-            <td>Antes de empezar una partida (juego) o durante juegos, la aplicación desplegará ciertos tips o hints relazinados a los valores ya definidos que deseamos inculcar a los usuarios por medio de la aplicación. Esto con el objetivo de poder transmitir mejor el mensaje.</td>
+            <td>Antes de empezar una partida (juego) o durante juegos, la aplicación desplegará ciertos tips o hints relazinados a los valores ya definidos que deseamos inculcar a los usuarios por medio de la aplicación. Esto con el objetivo de poder
+              transmitir mejor el mensaje.</td>
           </tr>
         </tbody>
       </table>
