New interview and simplicity laws

--- a/proyecto-final-entrega-4/index.html
+++ b/proyecto-final-entrega-4/index.html
@@ -126,8 +126,8 @@
               arregla. Cree controles son sencillos, ideales para niños de corta edad.</td>
           </tr>
           <tr>
-            <td><i>Nombre</i></td>
-            <td class="text-justify">Texto</td>
+            <td><i>Ana Paula</i></td>
+            <td class="text-justify">Considera que es muy buen prototipo, le gustaron las imágenes y cree que el contenido es bueno para los niños. Aun así, comenta que en algunas partes del videojuego no es tan claro cómo se debe jugar o cómo se puede mover el usuario de una pantalla a otra.</td>
           </tr>
         </tbody>
       </table>
@@ -143,7 +143,9 @@
       <br>
       <div class="row">
         <div class="col-md-12">
-          <p>Texto</p>
+          <p>Para desarrollar este segundo prototipo se hicieron uso de algunas de las Leyes de la Simplicidad de John Maeda, entre las cuales se encuentran el Reducir, Organizar y Diferencias. Por un lado, en este prototipo buscamos reducir ciertas tareas o elementos que no aportan mucho al diseño con el fin de hacerlo más sencillo ya que como está orientado a niños pequeños, no debe de tener contenido innecesario que pueda distraerlos.</p>
+          <br>
+          <p>Por otro lado, buscamos organizar o mantener un patrón en ciertas pantallas como por ejemplo en las instrucciones de cómo jugar. Esto alineado al igual que el punto uno busca hacer mucho más sencillo la navegación de los usuarios y mejorar el entendimiento de las instrucciones. Por último, con la ley de diferencias buscamos generar en ciertas partes del videojuego "negativos" para mejorar la visibilidad de la información y del juego en general.</p>
         </div>
       </div>
       <br><br>
